Revision history for Compression-Util

0.16    2026-??-??

        [IMPROVEMENTS]

        - Better performance in `bwt_sort()` for certain inputs. (~2x faster)

0.15    2025-04-03

        [BUG-FIXES]

        - Set the appropriate DEFLATE values inside the `deflate_*` functions.

0.14    2024-11-06

        [ADDITIONS]

        - Added the `adler32()` checksum function.
        - Added the `zlib_compress()` and `zlib_uncompress()` functions.
        - Added the following low-level functions:

            deflate_create_block_type_0_header
            deflate_create_block_type_1
            deflate_create_block_type_2

            deflate_extract_next_block
            deflate_extract_block_type_0
            deflate_extract_block_type_1
            deflate_extract_block_type_2

0.13    2024-08-25

        [IMPROVEMENTS]

        - More Gzip flags are now recognized.
        - Better compression ratio in bzip2_compress().

        [BUG-FIXES]

        - Fixed the extraction of Gzip data that contains a comment.
        - Fixed a potential CRC32 issue in bzip2_compress() when data gets expanded.

0.12    2024-08-23

        [ADDITIONS]

        - Added the `lz4_compress()` and `lz4_decompress()`  functions.

        [IMPROVEMENTS]

        - Slightly better performance in `mtf_encode()`.
        - Replaced all "die" statements, with Carp::confess(), for better debugging.

        [BUG-FIXES]

        - Allow `$LZ77_MIN_LEN` to be set by the user to a value greater than 4, before calling `gzip_compress()`.

0.11    2024-08-22

        [ADDITIONS]

        - Added the `crc32()` function.
        - Added the `int2bytes()` and `int2bytes_lsb()` functions.
        - Added the `bzip2_compress()` and `bzip2_decompress()` functions.
        - Added the `gzip_compress()` and `gzip_decompress()` functions.
        - Added the `encode_alphabet_256()` and `decode_alphabet_256()` functions.

        [IMPROVEMENTS]

        - Minor documentation improvements.